# adaptive-nthash

./: README.md  benchmark_plot.py  benchmark_times.csv  calc.py  meson.build
examples/: adaptive_benchmark.cpp  entropy_benchmark.cpp  normal_benchmark.cpp
include/nthash/: adaptive_hash.hpp  entropy.hpp
src/: adaptive_hash.cpp  entropy.cpp
tests/: adaptive_test.cpp
